--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 
 body{
+
     margin:0;
 }
 
@@ -10,19 +11,25 @@ h1{
 #head-container{
     text-align: center;
     background-color: black;
-    height: 100px;
+    /* height: 100px; */
 }
 
 #middle-container{
+    padding: 5% 0 5% 0;
     text-align:center;
-background-image: linear-gradient(to right top, #34413d, #435450, #516865, #617c7b, #719192);    /* background-color: #719192; */
-    height: 70vh;
+    background-image: -webkit-linear-gradient(bottom left, #34413d, #435450, #516865, #617c7b, #719192);
+background-image: -o-linear-gradient(bottom left, #34413d, #435450, #516865, #617c7b, #719192);
+background-image: linear-gradient(to top right, #34413d, #435450, #516865, #617c7b, #719192);    /* background-color: #719192; */
+
+    /* height: 100%; */
+
 }
 #bottom-container{
     padding:15px;
     text-align: center;
-    border:0px;
-background-image: linear-gradient(to right top, #000000, #3c3233, #79635f, #b9998d, #f9d5bb);
+background-image: -webkit-linear-gradient(bottom left, #000000, #3c3233, #79635f, #b9998d, #f9d5bb);
+background-image: -o-linear-gradient(bottom left, #000000, #3c3233, #79635f, #b9998d, #f9d5bb);
+background-image: linear-gradient(to top right, #000000, #3c3233, #79635f, #b9998d, #f9d5bb);
 }
 .header-font{
 display: inline-block;
